# streaming-prototype

./: .gitignore  Cargo.toml  Makefile  package.json  tsconfig.json
client/: package.json  tsconfig.json
client/src/: App.tsx  Connection.tsx  Stream.tsx  VideoCard.js  View.tsx
lib/: index.ts  types.ts
protos/client/src/: App.tsx  Connection.tsx  Stream.tsx  VideoCard.js  View.tsx
protos/socketio/src/: utils.ts
protos/ws-rust/: Cargo.toml
protos/ws-rust/src/: main.rs
server/: package.json
server/src/: socket.ts  utils.ts
socketio/src/: socket.ts
src/: index.ts  mod.ts  socket.ts  utils.ts
srv/: messages.ts  server.ts  tsconfig.json
ws/: ConnWs.tsx  Queries.ts  index.html  index.ts  mod.ts
