[package]
name = "ws-rust"
version = "0.1.0"
authors = ["halvardssm <halvard@simplyundoable.com>"]
edition = "2018"

[dependencies]
tokio-tungstenite = "0.10.1"
tokio = { version = "0.2.21", features = ["macros", "tcp", "dns", "io-util"] }
futures-channel = "0.3.5"
tungstenite = "0.10.1"
futures-util = "0.3.11"